[gd_scene load_steps=3 format=3]
[ext_resource type="Script" path="res://game/scripts/Balance.gd" id="1"]
[ext_resource type="Script" path="res://game/scripts/Research.gd" id="2"]
[ext_resource type="Script" path="res://game/scripts/Economy.gd" id="3"]
[ext_resource type="Script" path="res://game/scripts/Save.gd" id="4"]
[ext_resource type="Script" path="res://game/scripts/Main.gd" id="5"]
[ext_resource type="PackedScene" path="res://game/scenes/modules/environment/PollutionOverlay.tscn" id="6"]

[node name="Main" type="Node"]
script = ExtResource("5")

[node name="Balance" type="Node" parent="."]
script = ExtResource("1")

[node name="Research" type="Node" parent="."]
script = ExtResource("2")

[node name="Economy" type="Node" parent="."]
script = ExtResource("3")

[node name="Save" type="Node" parent="."]
script = ExtResource("4")

[node name="EnvironmentRoot" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = -5

[node name="DenySound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
autoplay = false
volume_db = -6.0

[node name="VisualLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 0

[node name="UI" type="CanvasLayer" parent="."]
layer = 1

[node name="EnvironmentOverlay" parent="UI" instance=ExtResource("6")]
unique_name_in_owner = true

[node name="VBox" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
offset_left = 20.0
offset_top = 20.0
offset_right = 580.0
offset_bottom = 420.0

[node name="StatsBox" type="HBoxContainer" parent="UI/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 28)

[node name="SoftLabel" type="Label" parent="UI/VBox/StatsBox"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="CapacityContainer" type="VBoxContainer" parent="UI/VBox"]
custom_minimum_size = Vector2(0, 48)

[node name="CapacityLabel" type="Label" parent="UI/VBox/CapacityContainer"]
unique_name_in_owner = true

[node name="CapacityBar" type="ProgressBar" parent="UI/VBox/CapacityContainer"]
unique_name_in_owner = true
size_flags_horizontal = 3
show_percentage = false
step = 0.01
value = 0.0
max_value = 1.0
theme_override_colors/background = Color(0.1, 0.1, 0.1, 1)
theme_override_colors/fill = Color(0.95, 0.82, 0.18, 1)

[node name="PPSLabel" type="Label" parent="UI/VBox"]
unique_name_in_owner = true

[node name="TierLabel" type="Label" parent="UI/VBox"]
unique_name_in_owner = true

[node name="PrestigeLabel" type="Label" parent="UI/VBox"]
unique_name_in_owner = true

[node name="BurstRow" type="VBoxContainer" parent="UI/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)

[node name="BurstButton" type="Button" parent="UI/VBox/BurstRow"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="FeedContainer" type="VBoxContainer" parent="UI/VBox/BurstRow"]
custom_minimum_size = Vector2(0, 36)

[node name="FeedStatus" type="Label" parent="UI/VBox/BurstRow/FeedContainer"]
unique_name_in_owner = true

[node name="FeedBar" type="ProgressBar" parent="UI/VBox/BurstRow/FeedContainer"]
unique_name_in_owner = true
show_percentage = false
step = 0.01
value = 1.0
max_value = 1.0

[node name="BuyProd" type="Button" parent="UI/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="BuyCap" type="Button" parent="UI/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="BuyAuto" type="Button" parent="UI/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="Promote" type="Button" parent="UI/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="ResearchHeader" type="Label" parent="UI/VBox"]
unique_name_in_owner = true

[node name="ResearchStatus" type="Label" parent="UI/VBox"]
unique_name_in_owner = true

[node name="ResearchBuyProd" type="Button" parent="UI/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="ResearchBuyCap" type="Button" parent="UI/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="ResearchBuyAuto" type="Button" parent="UI/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="PrestigeButton" type="Button" parent="UI/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3

[node name="ButtonRow" type="HBoxContainer" parent="UI/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)

[node name="Export" type="Button" parent="UI/VBox/ButtonRow"]
unique_name_in_owner = true
size_flags_horizontal = 1

[node name="Import" type="Button" parent="UI/VBox/ButtonRow"]
unique_name_in_owner = true
size_flags_horizontal = 1

[node name="SettingsButton" type="Button" parent="UI/VBox/ButtonRow"]
unique_name_in_owner = true
size_flags_horizontal = 1
text = "Settings"

[node name="OfflinePopup" type="PopupPanel" parent="UI"]
unique_name_in_owner = true
visible = false

[node name="VBox" type="VBoxContainer" parent="UI/OfflinePopup"]
anchors_preset = 8
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="OfflineLabel" type="Label" parent="UI/OfflinePopup/VBox"]
unique_name_in_owner = true

[node name="OfflineClose" type="Button" parent="UI/OfflinePopup/VBox"]
unique_name_in_owner = true
